test: Vec2f